python-aiohttp (3.5.4-1) UNRELEASED; urgency=medium

  [ William Grzybowski ]
  * New upstream version 3.5.4
  * d/control: add myself to Uploaders
  * d/copyright: adjust upstream years and remove debian/idna_ssl.py

  [ Ondřej Nový ]
  * Use debhelper-compat instead of debian/compat.
  * Bump Standards-Version to 4.4.0.
  * d/control: Remove ancient X-Python3-Version field.

 -- William Grzybowski <william@grzy.org>  Fri, 19 Jul 2019 13:48:39 -0300

python-aiohttp (3.5.1-1) unstable; urgency=medium

  * New upstream release
  * Remove idna_ssl patch - no longer needed in Python >= 3.7
  * Standards-Version bumped to 4.3.0 (no changes needed)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 31 Dec 2018 18:15:56 +0100

python-aiohttp (3.4.4-1~exp1) experimental; urgency=medium

  * Team upload
  * New upstream release (Closes: #901010)
  * debian/control:
    - New standards version 4.2.1 - no changes
    - Recommends libjs-jquery
  * debian/gbp.conf: Enable pristine-tar build
  * debian/patches:
    - Refresh patches
    - debian/patches/0002-Use-local-install-of-jquery.patch
      (fixes lintian)
  * debian/rules:
    - Do not delete aiohttp/_*.c in override_dh_auto_clean
    - Delete _find_header.h from binary packages

 -- Ruben Undheim <ruben.undheim@gmail.com>  Fri, 21 Dec 2018 18:32:14 +0000

python-aiohttp (3.1.3-1) unstable; urgency=medium

  * Team upload.
  * New upstream release
  * d/copyright: Fix Format URL to correct one
  * d/rules: Remove trailing whitespaces
  * Bump debhelper compat level to 11
  * Standards-Version is 4.2.0 now (no changes needed)
  * Enable autopkgtest-pkg-python testsuite
  * Install examples
  * Really bump required Python 3 version to 3.5.3
  * Enable all hardening
  * Add upstream metadata
  * d/copyright: Change Source to new location
  * Convert git repository from git-dpm to gbp layout
  * Require python3-yarl at least 1.0 (Closes: #897432)

 -- Ondřej Nový <onovy@debian.org>  Tue, 14 Aug 2018 14:53:26 +0200
