@@ -1,2 +1,3 @@
 */*.c
+*/*.h
 */*.pyx
